--- a/VoxCommand/packages.config
+++ b/VoxCommand/packages.config
@@ -4,6 +4,13 @@
   <package id="AudioSwitcher.AudioApi.CoreAudio" version="4.0.0-alpha5" targetFramework="net472" />
   <package id="Microsoft.CognitiveServices.Speech" version="1.37.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="4.7.0" targetFramework="net472" />
+  <package id="NAudio" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.Asio" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.Core" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.Midi" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.Wasapi" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.WinForms" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.WinMM" version="2.2.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="4.19.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
